@@ -5,6 +5,7 @@ require 'checkdin/version'
 require 'checkdin/leaderboard'
 require 'checkdin/custom_activities'
 require 'checkdin/users'
+require 'checkdin/user_bridge'
 require 'checkdin/activities'
 require 'checkdin/won_rewards'
 require 'checkdin/promotions'
