@@ -1,6 +1,7 @@
 current unreleased version
  * Removed jeweler dependency
  * Introduced Checkdin::VERSION for runtime version information
+ * Checkdin::UserBridge added for creating and logging users in
 
 0.1.0 - Released February 14, 2012
  * Initial usable release
